force-app/main/default/objects/PRISM_Attachment__c/PRISM_Attachment__c.object-meta.xml
<CustomObject>
    <description>An attachment on a Structure — telecom, power, or street light equipment. Master-detail to Structure.</description>

    <label>Attachment</label>
    <nameField>
        <label>Attachment ID</label>
        <type>AutoNumber</type>
        <displayFormat>ATT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>