force-app/main/default/objects/PRISM_Attachment__c/fields/AttachmentHeight__c.field-meta.xml
<CustomField>
    <fullName>AttachmentHeight__c</fullName>
    <label>Attachment Height (ft)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>