force-app/main/default/objects/PRISM_Attachment__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <label>Circuit</label>
    <type>Lookup</type>
    <referenceTo>PRISM_Circuit__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
</CustomField>