force-app/main/default/objects/PRISM_Attachment__c/fields/InstallDate__c.field-meta.xml
<CustomField>
    <fullName>InstallDate__c</fullName>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>