force-app/main/default/objects/PRISM_Attachment__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Attachment Owner</label>
    <type>Text</type>
    <length>150</length>
</CustomField>