force-app/main/default/objects/PRISM_Attachment__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_Structure__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    
</CustomField>